Remove unneeded imports; Reformat output

--- a/llm_text/poc.ipynb
+++ b/llm_text/poc.ipynb
@@ -11,64 +11,35 @@
     "import os\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "\n",
-    "import chromadb\n",
-    "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
-    "\n",
     "import requests\n",
     "\n",
-    "# Imports needed for vector store with huggingface\n",
+    "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
+    "from langchain_chroma import Chroma\n",
     "from langchain_huggingface import HuggingFaceEmbeddings\n",
     "from langchain.document_loaders import TextLoader\n",
     "\n",
-    "# Imports needed for vector store/model predictions with distilbert\n",
-    "from transformers import DistilBertTokenizer, DistilBertModel\n",
     "import torch"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "id": "xfMx26bI9UYC"
-   },
-   "outputs": [],
-   "source": [
-    "# Embedding function for Distilbert\n",
-    "tokenizer_distilbert = DistilBertTokenizer.from_pretrained('distilbert-base-uncased')\n",
-    "model_distilbert = DistilBertModel.from_pretrained('distilbert-base-uncased')\n",
-    "\n",
-    "def create_embedding_distilbert(text):\n",
-    "    # Tokenize input text\n",
-    "    inputs = tokenizer_distilbert(text, return_tensors='pt', padding=True, truncation=True)\n",
-    "    # Get model outputs\n",
-    "    with torch.no_grad():\n",
-    "        outputs = model_distilbert(**inputs)\n",
-    "    # Take the mean of the last hidden state to get the sentence embedding\n",
-    "    return outputs.last_hidden_state.mean(dim=1).squeeze().numpy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/jelly/Sync/jelly/dev/dscience/venv/lib/python3.10/site-packages/sentence_transformers/cross_encoder/CrossEncoder.py:13: TqdmExperimentalWarning: Using `tqdm.autonotebook.tqdm` in notebook mode. Use `tqdm.tqdm` instead to force console mode (e.g. in jupyter console)\n",
+      "  from tqdm.autonotebook import tqdm, trange\n"
+     ]
+    }
+   ],
    "source": [
     "# Make vector store statbel_huggingface with unnormalized huggingface embedding\n",
     "# Load the text document\n",
-    "from langchain_chroma import Chroma\n",
-    "from chromadb import Client\n",
-    "\n",
-    "hf_embedding_function = HuggingFaceEmbeddings(model_name=\"sentence-transformers/all-MiniLM-L6-v2\")\n",
+    "embedding_function = HuggingFaceEmbeddings(model_name=\"sentence-transformers/all-MiniLM-L6-v2\")\n",
     "collection_name=\"astro_hf\"\n",
-    "\n",
     "\n",
     "recreate_vectorstore = 0\n",
     "if recreate_vectorstore:\n",
@@ -77,7 +48,7 @@
     "    except:\n",
     "        pass\n",
     "    vector_store = Chroma(collection_name=collection_name, \n",
-    "                      embedding_function=hf_embedding_function,\n",
+    "                      embedding_function=embedding_function,\n",
     "                      persist_directory=\".\")\n",
     "    \n",
     "    loader = TextLoader(\"input_data/astronomy.txt\")\n",
@@ -104,13 +75,13 @@
     "            print(\"-\" * 50)\n",
     "else:\n",
     "    vector_store = Chroma(collection_name=collection_name, \n",
-    "                      embedding_function=hf_embedding_function,\n",
+    "                      embedding_function=embedding_function,\n",
     "                      persist_directory=\".\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -141,13 +112,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Answer the question based only on the following context: Astronomy is a natural science that studies celestial objects and the phenomena that occur in the cosmos. It uses mathematics, physics, and chemistry in order to explain their origin and their overall evolution. Objects of interest include planets, moons, stars, nebulae, galaxies, meteoroids, asteroids, and comets. Relevant phenomena include supernova explosions, gamma ray bursts, quasars, blazars, pulsars, and cosmic microwave background radiation. More generally, astronomy studies everything that originates beyond Earth's atmosphere. Cosmology is a branch of astronomy that studies the universe as a whole.\n",
+      "\n",
+      "Astronomy is one of the oldest natural sciences. The early civilizations in recorded history made methodical observations of the night sky. These include the Egyptians, Babylonians, Greeks, Indians, Chinese, Maya, and many ancient indigenous peoples of the Americas. In the past, astronomy included disciplines as diverse as astrometry, celestial navigation, observational astronomy, and the making of calendars.\n",
+      "\n",
+      "Professional astronomy is split into observational and theoretical branches. Observational astronomy is focused on acquiring data from observations of astronomical objects. This data is then analyzed using basic principles of physics. Theoretical astronomy is oriented toward the development of computer or analytical models to describe astronomical objects and phenomena. These two fields complement each other. Theoretical astronomy seeks to explain observational results and observations are used to confirm theoretical results.\n",
+      "\n",
+      "Question: What is astronomy?\n"
+     ]
+    }
+   ],
    "source": [
-    "from transformers import pipeline\n",
-    "# Use some text-generation models and compare\n",
-    "#generator = pipeline(\"text-generation\", model=\"distilgpt2\")\n",
+    "# Query the llm\n",
     "query_w_context = f\"\"\"Answer the question based only on the following context: {context}\n",
     "\n",
     "Question: {query}\"\"\"\n",
@@ -159,28 +142,8 @@
     "    data = response.json()\n",
     "    return data\n",
     "\n",
-    "response = query_llm(query_w_context)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'cuda'"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "processing_type = response[\"device\"]\n",
-    "processing_type"
+    "response = query_llm(query_w_context)\n",
+    "print(query_w_context)"
    ]
   },
   {
@@ -189,55 +152,31 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'Astronomy is a natural science that studies celestial objects and the phenomena that occur in the cosmos.'"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Generated on cuda.\n",
+      "\n",
+      "Response: Answer: Astronomy is a natural science that studies celestial objects and the phenomena that occur in the cosmos.\n",
+      "\n",
+      "\n"
+     ]
     }
    ],
    "source": [
+    "processing_type = response[\"device\"]\n",
     "answer = response[\"response\"]['choices'][0]['text'].strip()\n",
-    "answer"
+    "\n",
+    "output = f'''\n",
+    "Generated on {processing_type}.\n",
+    "\n",
+    "Response: {answer}\n",
+    "\n",
+    "'''\n",
+    "\n",
+    "print(output)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
