--- a/llm_statbel/poc.ipynb
+++ b/llm_statbel/poc.ipynb
@@ -9,95 +9,101 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "import shutil\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import requests\n",
     "\n",
-    "import chromadb\n",
-    "\n",
-    "# Imports needed for vector store with huggingface\n",
+    "from langchain_chroma import Chroma\n",
+    "from langchain_community.document_loaders import DataFrameLoader\n",
     "from langchain_huggingface import HuggingFaceEmbeddings\n",
-    "\n",
-    "# Imports needed for vector store/model predictions with distilbert\n",
-    "from transformers import DistilBertTokenizer, DistilBertModel\n",
     "import torch"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "id": "xfMx26bI9UYC"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# Embedding function for Distilbert\n",
-    "tokenizer_distilbert = DistilBertTokenizer.from_pretrained('distilbert-base-uncased')\n",
-    "model_distilbert = DistilBertModel.from_pretrained('distilbert-base-uncased')\n",
-    "\n",
-    "def create_embedding_distilbert(text):\n",
-    "    # Tokenize input text\n",
-    "    inputs = tokenizer_distilbert(text, return_tensors='pt', padding=True, truncation=True)\n",
-    "    # Get model outputs\n",
-    "    with torch.no_grad():\n",
-    "        outputs = model_distilbert(**inputs)\n",
-    "    # Take the mean of the last hidden state to get the sentence embedding\n",
-    "    return outputs.last_hidden_state.mean(dim=1).squeeze().numpy()"
+    "df = pd.read_csv('input_data/soc_sample.csv', header=0)\n",
+    "df = df[df.iloc[:, 0].str.startswith('in the city of Halle')]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/jelly/Sync/jelly/dev/dscience/venv/lib/python3.10/site-packages/sentence_transformers/cross_encoder/CrossEncoder.py:13: TqdmExperimentalWarning: Using `tqdm.autonotebook.tqdm` in notebook mode. Use `tqdm.tqdm` instead to force console mode (e.g. in jupyter console)\n",
+      "  from tqdm.autonotebook import tqdm, trange\n"
+     ]
+    }
+   ],
    "source": [
-    "client = chromadb.PersistentClient(path=\".\")\n",
+    "# Make vector store statbel with unnormalized huggingface embedding\n",
+    "embedding_function = HuggingFaceEmbeddings(model_name=\"sentence-transformers/all-MiniLM-L6-v2\")\n",
+    "collection_name=\"statbel\"\n",
     "\n",
-    "collection_hf = client.get_or_create_collection(\"statbel_hf\")\n",
-    "collection_distilbert = client.get_or_create_collection(\"statbel_distilbert\")"
+    "recreate_vectorstore = 0\n",
+    "if recreate_vectorstore:\n",
+    "    try:\n",
+    "        os.remove('chroma.sqlite3')\n",
+    "    except:\n",
+    "        pass\n",
+    "        \n",
+    "    vector_store = Chroma(collection_name=collection_name, \n",
+    "                      embedding_function=embedding_function,\n",
+    "                      persist_directory=\".\")\n",
+    "    \n",
+    "    loader = DataFrameLoader(df, page_content_column=\"text\")\n",
+    "    docs = loader.load()\n",
+    "    \n",
+    "    vector_store.add_documents(docs)\n",
+    "else:\n",
+    "    vector_store = Chroma(collection_name=collection_name, \n",
+    "                      embedding_function=embedding_function,\n",
+    "                      persist_directory=\".\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "in the city of Halle the number of males born in bel married and age 85 is 57\n",
+      "in the city of Halle the number of males born in bel married and age 84 is 57\n",
+      "in the city of Halle the number of males born in bel married and age 35 is 77\n",
+      "in the city of Halle the number of males born in bel married and age 82 is 50\n",
+      "in the city of Halle the number of males born in bel married and age 81 is 75\n",
+      "in the city of Halle the number of males born in bel married and age 83 is 59\n",
+      "in the city of Halle the number of males born in bel married and age 65 is 120\n",
+      "in the city of Halle the number of males born in bel married and age 77 is 95\n",
+      "in the city of Halle the number of males born in bel married and age 38 is 95\n",
+      "in the city of Halle the number of males born in bel married and age 86 is 46\n"
+     ]
+    }
+   ],
    "source": [
-    "# Make vector store statbel_huggingface with unnormalized huggingface embedding\n",
-    "hf_embeddings_model = HuggingFaceEmbeddings()\n",
+    "# Start asking some questions ..\n",
+    "query = \"in the city of Halle how many males of age 65 which are born in bel and married?\"\n",
     "\n",
-    "recreate_vectorstore = 0\n",
+    "results = vector_store.similarity_search(query, k=10)\n",
     "\n",
-    "# Check if the ChromaDB file exists. If not, build it\n",
-    "if recreate_vectorstore:\n",
-    "    # Load the context data\n",
-    "    df = pd.read_csv('input_data/soc_sample.csv', header=0)\n",
-    "    df = df[df.iloc[:, 0].str.startswith('in the city of Halle')]\n",
+    "# Combine the retrieved documents to use as context\n",
+    "context = \"\\n\".join(result.page_content.strip() for result in results)\n",
     "\n",
     "\n",
-    "    # Huggingface embeddings\n",
-    "    df['embeddings_hf'] = df['text'].apply(lambda x: hf_embeddings_model.embed_query(x))\n",
-    "    \n",
-    "    # DistilBERT embeddings\n",
-    "    df['embeddings_distilbert'] = df['text'].apply(lambda x: create_embedding_distilbert(x))\n",
-    "\n",
-    "    ids = [str(index) for index in df.index]  # Convert index to string for IDs\n",
-    "\n",
-    "    collection_hf = client.get_or_create_collection(name=\"statbel_hf\")\n",
-    "    collection_hf.add(\n",
-    "        ids=ids,  # Unique identifiers for each document\n",
-    "        documents=df['text'].tolist(), \n",
-    "        embeddings=df['embeddings_hf'].tolist(),\n",
-    "        metadatas=[{\"index\": index} for index in df.index]  # Optional metadata\n",
-    "        )\n",
-    "    \n",
-    "    # Make vector store statbel_distilbert with unnormalized distilbert embedding\n",
-    "    collection_distilbert = client.get_or_create_collection(name=\"statbel_distilbert\")\n",
-    "    collection_distilbert.add(\n",
-    "        ids=ids,  # Unique identifiers for each document\n",
-    "        documents=df['text'].tolist(),  # The text you want to store\n",
-    "        embeddings=df['embeddings_distilbert'].tolist(),  # The corresponding embeddings\n",
-    "        metadatas=[{\"index\": index} for index in df.index]  # Optional metadata\n",
-    "        )"
+    "for i, result in enumerate(results):\n",
+    "    print(result.page_content)"
    ]
   },
   {
@@ -109,57 +115,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "huggingface:\n",
-      "in the city of Halle the number of males born in bel married and age 89 is 25\n",
-      "in the city of Halle the number of males born in bel married and age 90 is 19\n",
-      "in the city of Halle the number of males born in bel married and age 65 is 120\n",
-      "in the city of Halle the number of males born in bel married and age 85 is 57\n",
-      "in the city of Halle the number of males born in bel married and age 82 is 50\n",
+      "Answer the question based only on the following context: in the city of Halle the number of males born in bel married and age 85 is 57\n",
+      "in the city of Halle the number of males born in bel married and age 84 is 57\n",
       "in the city of Halle the number of males born in bel married and age 35 is 77\n",
+      "in the city of Halle the number of males born in bel married and age 82 is 50\n",
       "in the city of Halle the number of males born in bel married and age 81 is 75\n",
-      "in the city of Halle the number of males born in bel married and age 34 is 71\n",
-      "in the city of Halle the number of males born in bel unmarried and age 65 is 30\n",
-      "in the city of Halle the number of males born in bel married and age 32 is 74\n",
+      "in the city of Halle the number of males born in bel married and age 83 is 59\n",
+      "in the city of Halle the number of males born in bel married and age 65 is 120\n",
+      "in the city of Halle the number of males born in bel married and age 77 is 95\n",
+      "in the city of Halle the number of males born in bel married and age 38 is 95\n",
+      "in the city of Halle the number of males born in bel married and age 86 is 46\n",
       "\n",
-      "distilbert:\n",
-      "in the city of Halle the number of males born in bel unmarried and age 65 is 30\n",
-      "in the city of Halle the number of males born in bel divorced and age 60 is 45\n",
-      "in the city of Halle the number of males born in bel unmarried and age 60 is 37\n",
-      "in the city of Halle the number of males born in bel married and age 30 is 51\n",
-      "in the city of Halle the number of males born in bel unmarried and age 61 is 40\n",
-      "in the city of Halle the number of males born in bel unmarried and age 55 is 61\n",
-      "in the city of Halle the number of males born in bel unmarried and age 63 is 30\n",
-      "in the city of Halle the number of males born in bel unmarried and age 30 is 188\n",
-      "in the city of Halle the number of males born in bel divorced and age 50 is 23\n",
-      "in the city of Halle the number of males born in bel unmarried and age 25 is 200\n",
-      "\n"
+      "Question: in the city of Halle how many males of age 65 which are born in bel and married?\n"
      ]
     }
    ],
    "source": [
-    "# Start asking some questions ..\n",
-    "query = \"in the city of Halle how many males of age 65 which are born in bel and married?\"\n",
+    "# Query the llm\n",
+    "query_w_context = f\"\"\"Answer the question based only on the following context: {context}\n",
     "\n",
-    "def get_context(query, model):\n",
-    "    if model == 'huggingface':\n",
-    "        query_embedding = hf_embeddings_model.embed_query(query)\n",
-    "        results = collection_hf.query(\n",
-    "                                      query_embeddings=[query_embedding],  \n",
-    "                                      n_results=10\n",
-    "                                     )\n",
-    "    elif model == 'distilbert':\n",
-    "        query_embedding = create_embedding_distilbert(query)\n",
-    "        results = collection_distilbert.query(\n",
-    "                                              query_embeddings=[query_embedding],\n",
-    "                                              n_results=10\n",
-    "                                             ) \n",
-    "        \n",
-    "    context = \"\\n\".join(results['documents'][0])\n",
-    "    print(f'{model} context:\\n{context}\\n')\n",
-    "    return context\n",
+    "Question: {query}\"\"\"\n",
     "\n",
-    "context_hf = get_context(query, 'huggingface')\n",
-    "context_distilbert = get_context(query, 'distilbert')"
+    "# Function to query local flask server llm (mistral-7b-orca)\n",
+    "def query_llm(prompt):\n",
+    "    url = \"http://192.168.0.23:8000/generate\"\n",
+    "    response = requests.post(url, json={\"prompt\": prompt})\n",
+    "    data = response.json()\n",
+    "    return data\n",
+    "\n",
+    "response = query_llm(query_w_context)\n",
+    "print(query_w_context)"
    ]
   },
   {
@@ -171,53 +156,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Answer: 120\n"
+      "\n",
+      "Generated on cuda.\n",
+      "\n",
+      "Response: Based on the context, there are 120 males born in Halle who are males born in bel married and age 65.\n",
+      "\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "from transformers import DistilBertForQuestionAnswering\n",
+    "processing_type = response[\"device\"]\n",
+    "answer = response[\"response\"]['choices'][0]['text'].strip()\n",
     "\n",
-    "# Get the model's predictions\n",
-    "inputs = tokenizer_distilbert(query, context_hf, return_tensors='pt', padding=True, truncation=True)\n",
-    "model = DistilBertForQuestionAnswering.from_pretrained('distilbert-base-uncased-distilled-squad')\n",
+    "output = f'''\n",
+    "Generated on {processing_type}.\n",
     "\n",
+    "Response: {answer}\n",
     "\n",
-    "with torch.no_grad():\n",
-    "    outputs = model(**inputs)\n",
+    "'''\n",
     "\n",
-    "\n",
-    "# Get the start and end scores\n",
-    "start_scores = outputs.start_logits\n",
-    "end_scores = outputs.end_logits\n",
-    "\n",
-    "\n",
-    "# Get the most likely start and end of the answer\n",
-    "start_index = torch.argmax(start_scores)\n",
-    "end_index = torch.argmax(end_scores) + 1  # +1 because the end index is inclusive\n",
-    "\n",
-    "\n",
-    "# Decode the answer\n",
-    "answer_tokens = inputs['input_ids'][0][start_index:end_index]\n",
-    "answer = tokenizer_distilbert.decode(answer_tokens)\n",
-    "\n",
-    "\n",
-    "print(\"Answer:\", answer)"
+    "print(output)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
