Add kaggle_housing_price project; Small changes and cleanups

--- a/llm_statbel/poc.ipynb
+++ b/llm_statbel/poc.ipynb
@@ -126,7 +126,8 @@
       "in the city of Halle the number of males born in bel married and age 38 is 95\n",
       "in the city of Halle the number of males born in bel married and age 86 is 46\n",
       "\n",
-      "Question: in the city of Halle how many males of age 65 which are born in bel and married?\n"
+      "Question: in the city of Halle how many males of age 65 which are born in bel and married?\n",
+      "Query length: 929\n"
      ]
     }
    ],
@@ -144,12 +145,13 @@
     "    return data\n",
     "\n",
     "response = query_llm(query_w_context)\n",
-    "print(query_w_context)"
+    "print(query_w_context)\n",
+    "print(f'Query length: {len(query_w_context)}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +161,7 @@
       "\n",
       "Generated on cuda.\n",
       "\n",
-      "Response: Based on the context, there are 120 males born in Halle who are males born in bel married and age 65.\n",
+      "Response: \n",
       "\n",
       "\n"
      ]
@@ -178,6 +180,52 @@
     "\n",
     "print(output)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Generated on cuda.\n",
+      "\n",
+      "Answer: 306\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "query_2 = \"How many males between age 80 and 85 and married and born in bel are there?\"\n",
+    "query_w_context_2 = f\"\"\"Answer the question based only on the following context: {context}\n",
+    "\n",
+    "Question: {query_2}\"\"\"\n",
+    "\n",
+    "\n",
+    "response_2 = query_llm(query_w_context_2)\n",
+    "\n",
+    "processing_type, answer = response_2[\"device\"], response_2[\"response\"]['choices'][0]['text'].strip()\n",
+    "\n",
+    "output = f'''\n",
+    "Generated on {processing_type}.\n",
+    "\n",
+    "{answer}\n",
+    "\n",
+    "'''\n",
+    "\n",
+    "print(output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
